--- a/event-object/tabs/task.html
+++ b/event-object/tabs/task.html
@@ -41,10 +41,10 @@
                 <div>Veritatis assumenda ipsam delectus illum rerum, voluptatem quaerat natus dolorum odio adipisci velit a. Minima voluptate quasi fugit ducimus repellat ipsa, accusantium pariatur nisi neque, dolorum ratione mollitia, sunt voluptatem!</div>
             </div>
             <div class="tab__content">
-                Я краб!
+                Я краб! И хорошо что краб, а не раб!
             </div>
             <div class="tab__content">
-                Содержимое в процессе написания. Поищите в Галактике!
+                Содержимое в процессе написания. Поищите в Галактике! Лучше всего в Нашей!
             </div>
         </div>
     </div>
