--- a/client-state/text-editor/task.html
+++ b/client-state/text-editor/task.html
@@ -1,4 +1,5 @@
-<!doctype html>
+
+</html><!doctype html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -25,4 +26,3 @@
     </main>    
     <script src="task.js"></script>
 </body>
-</html>
